# disaster-management-workflow-extraction-system

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/.chalice/: config.json  dynamodb_policy.json  lambda_policy.json
backend/.chalice/deployed/: dev.json
backend/chalicelib/utils/: database.py  logger.py  s3_storage.py
backend/utils/: database.py  s3_storage.py
docs/: AWS_RESOURCES.md  DEPLOYMENT.md  ENV_MAPPING.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  config.js  index.css
frontend/src/components/: ChartDisplay.css  ChartDisplay.js  Chat.css  Chat.js  ChatUI.css  ChatUI.js  CytoscapeChart.js  DeleteConfirmModal.js  MermaidChart.css  MermaidChart.js  ReactFlowChart.js  SaveFlowchartModal.css  SaveFlowchartModal.js  SavedFlowcharts.css  SavedFlowcharts.js  UploadManager.js  UploadPdf.css  UploadPdf.js  X6Chart.js
frontend/src/utils/: logger.js
frontend_eng/: .gitignore  package-lock.json  package.json
frontend_eng/public/: index.html  manifest.json
frontend_eng/src/: App.css  App.js  config.js  setupProxy.js
frontend_eng/src/components/: ChartDisplay.css  ChartDisplay.js  ChatUI.css  ChatUI.js  DeleteConfirmModal.js  FlowchartEditor.js  MermaidChart.css  MermaidChart.js  SaveFlowchartModal.css  SaveFlowchartModal.js  SavedFlowcharts.css  SavedFlowcharts.js  UploadPdf.js
