[project]
name = "disaster-management-backend"
version = "0.1.0"
description = "Backend for Disaster Management Workflow Extraction System"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "chalice==1.29.0",
    "openai==1.65.5",
    "PyMuPDF",
    "PyPDF2==3.0.1",
    "python-dotenv==1.0.0",
    "Pillow==11.0.0",
    "pytesseract==0.3.10",
    "pdf2image==1.16.3",
    "boto3==1.34.0",
    "standard-distutils",
]


